--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@progress/kendo-licensing": "1.2.2",
     "@progress/kendo-react-animation": "5.3.0",
     "@progress/kendo-react-charts": "^5.3.0",
+    "@progress/kendo-react-dialogs": "^5.3.0",
+    "@progress/kendo-react-grid": "^5.3.0",
     "@progress/kendo-react-indicators": "5.3.0",
     "@progress/kendo-react-intl": "5.3.0",
     "@progress/kendo-react-layout": "5.3.0",
@@ -17,9 +19,12 @@
     "@types/node": "^16.11.41",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "hammerjs": "^2.0.8",
     "prop-types": "15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
