--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,8 @@
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "hammerjs": "^2.0.8",
+    "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "prop-types": "15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -52,5 +54,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.2"
   }
 }
